Rename app branding and add upcoming classes page

--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -1,3 +1,3 @@
 <div class="cta">
-  <a href="https://falowen.app" class="cta-button" target="_blank" rel="noopener">Check out Falowen App</a>
+  <a href="https://sedifex.com" class="cta-button" target="_blank" rel="noopener">Check out Sedifex Inventory App</a>
 </div>
