--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -24,7 +24,7 @@
         <a href="{{ '/contact/' | relative_url }}">Contact</a>
       </li>
       <li>
-        <a href="https://www.sedifex.com/register" target="_blank" rel="noopener">Register</a>
+        <a href="https://www.sedifex.com" target="_blank" rel="noopener">Register</a>
       </li>
       <li>
         <button id="theme-toggle" type="button">Dark Mode</button>
